test/classes/delete-free/multiple-modifiers.good
multiple-modifiers.chpl:10: error: type expression uses multiple memory management strategies ('owned' and 'owned')
multiple-modifiers.chpl:11: error: type expression uses multiple memory management strategies ('owned' and 'unmanaged')
multiple-modifiers.chpl:12: error: type expression uses multiple memory management strategies ('owned' and 'shared')
multiple-modifiers.chpl:13: error: type expression uses multiple memory management strategies ('unmanaged' and 'borrowed')
multiple-modifiers.chpl:14: error: type expression uses multiple memory management strategies ('unmanaged' and 'owned')
multiple-modifiers.chpl:15: error: type expression uses multiple memory management strategies ('unmanaged' and 'unmanaged')
multiple-modifiers.chpl:16: error: type expression uses multiple memory management strategies ('unmanaged' and 'shared')
multiple-modifiers.chpl:17: error: type expression uses multiple memory management strategies ('shared' and 'borrowed')
multiple-modifiers.chpl:18: error: type expression uses multiple memory management strategies ('shared' and 'owned')
multiple-modifiers.chpl:19: error: type expression uses multiple memory management strategies ('shared' and 'unmanaged')
multiple-modifiers.chpl:20: error: type expression uses multiple memory management strategies ('shared' and 'shared')
multiple-modifiers.chpl:21: error: type expression uses multiple memory management strategies ('borrowed' and 'owned')
multiple-modifiers.chpl:22: error: type expression uses multiple memory management strategies ('owned' and 'unmanaged')
multiple-modifiers.chpl:23: error: type expression uses multiple memory management strategies ('unmanaged' and 'shared')
multiple-modifiers.chpl:24: error: type expression uses multiple memory management strategies ('borrowed' and 'borrowed')
multiple-modifiers.chpl:25: error: type expression uses multiple memory management strategies ('borrowed' and 'owned')
multiple-modifiers.chpl:26: error: type expression uses multiple memory management strategies ('borrowed' and 'unmanaged')
multiple-modifiers.chpl:27: error: type expression uses multiple memory management strategies ('borrowed' and 'shared')
multiple-modifiers.chpl:28: error: type expression uses multiple memory management strategies ('owned' and 'borrowed')
multiple-modifiers.chpl:29: error: type expression uses multiple memory management strategies ('owned' and 'owned')
multiple-modifiers.chpl:30: error: type expression uses multiple memory management strategies ('owned' and 'unmanaged')
multiple-modifiers.chpl:31: error: type expression uses multiple memory management strategies ('owned' and 'shared')
multiple-modifiers.chpl:32: error: type expression uses multiple memory management strategies ('unmanaged' and 'borrowed')
multiple-modifiers.chpl:33: error: type expression uses multiple memory management strategies ('unmanaged' and 'owned')
multiple-modifiers.chpl:34: error: type expression uses multiple memory management strategies ('unmanaged' and 'unmanaged')
multiple-modifiers.chpl:35: error: type expression uses multiple memory management strategies ('unmanaged' and 'shared')
multiple-modifiers.chpl:36: error: type expression uses multiple memory management strategies ('shared' and 'borrowed')
multiple-modifiers.chpl:37: error: type expression uses multiple memory management strategies ('shared' and 'owned')
multiple-modifiers.chpl:38: error: type expression uses multiple memory management strategies ('shared' and 'unmanaged')
multiple-modifiers.chpl:39: error: type expression uses multiple memory management strategies ('shared' and 'shared')
multiple-modifiers.chpl:40: error: type expression uses multiple memory management strategies ('borrowed' and 'owned')
multiple-modifiers.chpl:41: error: type expression uses multiple memory management strategies ('owned' and 'unmanaged')
multiple-modifiers.chpl:42: error: type expression uses multiple memory management strategies ('unmanaged' and 'shared')
multiple-modifiers.chpl:5: error: type expression uses multiple memory management strategies ('borrowed' and 'borrowed')
multiple-modifiers.chpl:6: error: type expression uses multiple memory management strategies ('borrowed' and 'owned')
multiple-modifiers.chpl:7: error: type expression uses multiple memory management strategies ('borrowed' and 'unmanaged')
multiple-modifiers.chpl:8: error: type expression uses multiple memory management strategies ('borrowed' and 'shared')
multiple-modifiers.chpl:9: error: type expression uses multiple memory management strategies ('owned' and 'borrowed')
