test/classes/delete-free/multiple-modifiers.prediff
#!/usr/bin/env bash

cp "$2" $2.tmp
cat $2.tmp | sort > $2
rm $2.tmp

